Bug 510209 - Kinda random crash
Summary: Kinda random crash
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-03 19:51 UTC by Nik Nikovsky
Modified: 2025-10-04 12:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments
coredumpctl gdb backtrace with bt (94.91 KB, text/plain)
2025-10-03 20:08 UTC, Nik Nikovsky
Details
attachment-792255-0.html (170 bytes, text/html)
2025-10-03 22:37 UTC, Nik Nikovsky
Details
attachment-913764-0.html (239 bytes, text/html)
2025-10-04 07:26 UTC, Nik Nikovsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nik Nikovsky 2025-10-03 19:51:45 UTC
SUMMARY
I was trying to import some stuff and see if there is a keybind to avoid pressing the Enter transaction button.
Pressed CTRL+W which closed the tab (and asked me if I wanted to save the file, to which I said yes.) and then it crashed

STEPS TO REPRODUCE
1. Edit file
2. Press CTRL+W
3. Save the file

OBSERVED RESULT
App crash with SIGSERV and a memory violation

EXPECTED RESULT
File saving normally

SOFTWARE/OS VERSIONS
Operating System: KDE neon Testing Edition
KDE Plasma Version: 6.4.90
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.2
Kernel Version: 6.14.0-33-generic (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-5300U CPU @ 2.30GHz
Memory: 8 GiB of RAM (7.7 GiB usable)
Graphics Processor: Intel® HD Graphics 5500

ADDITIONAL INFORMATION
---basic errors since I ran kmymoney with the Konsole open and the --timers flag:
createPayee "Google Play"
No selections
ASSERT failure in LedgerViewPage: "Called object is not of the correct type (class destructor may have already run)", file /usr/include/x86_64-linux-gnu/qt6/QtCore/qobjectdefs_impl.h, line 105
KCrash: appFilePath points to nullptr!
KCrash: Application '<unknown>' crashing... crashRecursionCounter = 2
Naruszenie ochrony pamięci (zrzut pamięci)
--- and the coredumpctl will be attached in the next comment because I keep running out of RAM
Comment 1 Nik Nikovsky 2025-10-03 20:08:15 UTC
I had to make a swap file and I can't even send it as not a file because it is too long.
Comment 2 Nik Nikovsky 2025-10-03 20:08:59 UTC
Created attachment 185491 [details]
coredumpctl gdb backtrace with bt
Comment 3 Jack 2025-10-03 22:15:03 UTC
Comment on attachment 185491 [details]
coredumpctl gdb backtrace with bt

Sorry, this is just a text description, it is neither a coredump nor a backtrace.  A real backtrace would certainly help.  It would also help if you told us which version you are running, and whether it is from the Neon distribution package or something like appimage, snap, or flatpack

Thanks.
Comment 4 Nik Nikovsky 2025-10-03 22:37:27 UTC
Created attachment 185494 [details]
attachment-792255-0.html

Hi there,
I am using the version from the apt command and the file I uploaded was
made using the guide on the wiki.
Comment 5 Jack 2025-10-03 23:44:30 UTC
Apologies - I now see the correct backtrace, I'm not sure why I didn't see it earlier.  I also see you are running 5.2.1, which is the latest release, so that's good.  It will now take some time to dig through the backtrace and see if we can figure out what might have caused the crash.
For additional details, what View were you in when you crashed, and is the crash repeatable?  In Ledger View, Ctl-W should close the current ledger, and if it is the only ledger open, it should display a message about that.  In Home View, Ctl-W closes the currently open file (which would prompt for saving if it has changed) but should not crash.  Is that what happened?  Did you tell it to save or not, and if yes, did it save before crashing (you can tell by the time-stamp on the data file.
Comment 6 Nik Nikovsky 2025-10-04 07:26:23 UTC
Created attachment 185500 [details]
attachment-913764-0.html

If the view with the transactions is the ledger view, that's where it was.
I was prompted to save since I made changes without saving, and it saved.
Crashed afterwards
Comment 7 Thomas Baumgart 2025-10-04 12:13:02 UTC
Git commit a31e15fc045a5a6de32969a91ade3e9edf61370d by Thomas Baumgart.
Committed on 04/10/2025 at 11:38.
Pushed by tbaumgart into branch 'master'.

Prevent crash by eliminating lambda slot

The connection needs to be released before the object is destroyed which
otherwise could cause a crash. This can only be done with a normal
method but not with a lambda function. Converting the lambda into a
normal slot resolves the issue.
FIXED-IN: 5.2.2

M  +9    -3    kmymoney/views/ledgerview.cpp
M  +1    -0    kmymoney/views/ledgerview.h

https://invent.kde.org/office/kmymoney/-/commit/a31e15fc045a5a6de32969a91ade3e9edf61370d
Comment 8 Thomas Baumgart 2025-10-04 12:32:41 UTC
Git commit 6b33f4db225a348d356bdd35af9ae6a1f6b329b2 by Thomas Baumgart.
Committed on 04/10/2025 at 12:13.
Pushed by tbaumgart into branch '5.2'.

Prevent crash by eliminating lambda slot

The connection needs to be released before the object is destroyed which
otherwise could cause a crash. This can only be done with a normal
method but not with a lambda function. Converting the lambda into a
normal slot resolves the issue.
FIXED-IN: 5.2.2
(cherry picked from commit a31e15fc045a5a6de32969a91ade3e9edf61370d)

M  +9    -3    kmymoney/views/ledgerview.cpp
M  +1    -0    kmymoney/views/ledgerview.h

https://invent.kde.org/office/kmymoney/-/commit/6b33f4db225a348d356bdd35af9ae6a1f6b329b2